Document retrieval assignment. Answer to question 5

--- a/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 4/Document retrieval-Assignment.ipynb
+++ b/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 4/Document retrieval-Assignment.ipynb
@@ -1949,6 +1949,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Who is closer to 'Elton John', 'Victoria Beckham' or 'Paul McCartney'?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Paul McCartney"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
