Document retrieval assignment. Answer question 6

--- a/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 4/Document retrieval-Assignment.ipynb
+++ b/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 4/Document retrieval-Assignment.ipynb
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -677,7 +677,42 @@
        "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">{'phenomenon': 1,<br>'deborash': 1, 'both' ...</td>\n",
        "    </tr>\n",
        "</table>\n",
-       "[10 rows x 4 columns]<br/>\n",
+       "<table frame=\"box\" rules=\"cols\">\n",
+       "    <tr>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">tfidf</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">{'selection':<br>3.836578553093086, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">{'precise':<br>6.44320060695519, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">{'just':<br>2.7007299687108643, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">{'all':<br>1.6431112434912472, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">{'they':<br>1.8993401178193898, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">{'currently':<br>1.637088969126014, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">{'exclusive':<br>10.455187230695827, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">{'taxi':<br>6.0520214560945025, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">{'houston':<br>3.935505942157149, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">{'phenomenon':<br>5.750053426395245, ...</td>\n",
+       "    </tr>\n",
+       "</table>\n",
+       "[10 rows x 5 columns]<br/>\n",
        "</div>"
       ],
       "text/plain": [
@@ -686,6 +721,7 @@
        "\tname\tstr\n",
        "\ttext\tstr\n",
        "\tword_count\tdict\n",
+       "\ttfidf\tdict\n",
        "\n",
        "Rows: 10\n",
        "\n",
@@ -718,10 +754,24 @@
        "| grant nelson born 27 april... | {'houston': 1, 'frankie': ... |\n",
        "| cathy caruth born 1955 is ... | {'phenomenon': 1, 'deboras... |\n",
        "+-------------------------------+-------------------------------+\n",
-       "[10 rows x 4 columns]"
+       "+-------------------------------+\n",
+       "|             tfidf             |\n",
+       "+-------------------------------+\n",
+       "| {'selection': 3.8365785530... |\n",
+       "| {'precise': 6.443200606955... |\n",
+       "| {'just': 2.700729968710864... |\n",
+       "| {'all': 1.6431112434912472... |\n",
+       "| {'they': 1.899340117819389... |\n",
+       "| {'currently': 1.6370889691... |\n",
+       "| {'exclusive': 10.455187230... |\n",
+       "| {'taxi': 6.052021456094502... |\n",
+       "| {'houston': 3.935505942157... |\n",
+       "| {'phenomenon': 5.750053426... |\n",
+       "+-------------------------------+\n",
+       "[10 rows x 5 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -805,7 +855,7 @@
        "You can use print_rows(num_rows=m, num_columns=n) to print more rows and columns."
       ]
      },
-     "execution_count": 20,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -1764,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -1775,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -1859,7 +1909,7 @@
        "You can use print_rows(num_rows=m, num_columns=n) to print more rows and columns."
       ]
      },
-     "execution_count": 44,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1960,6 +2010,171 @@
    "metadata": {},
    "source": [
     "Paul McCartney"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Who is the nearest neighbor to 'Elton John' using raw word counts?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROGRESS: Starting brute force nearest neighbors model training.\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn_model_raw = graphlab.nearest_neighbors.create(people,features=['word_count'],label='name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROGRESS: Starting pairwise querying.\n",
+      "PROGRESS: +--------------+---------+-------------+--------------+\n",
+      "PROGRESS: | Query points | # Pairs | % Complete. | Elapsed Time |\n",
+      "PROGRESS: +--------------+---------+-------------+--------------+\n",
+      "PROGRESS: | 0            | 1       | 0.00169288  | 15.742ms     |\n",
+      "PROGRESS: | Done         |         | 100         | 194.767ms    |\n",
+      "PROGRESS: +--------------+---------+-------------+--------------+\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\"><table frame=\"box\" rules=\"cols\">\n",
+       "    <tr>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">query_label</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">reference_label</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">distance</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">rank</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">Elton John</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">Phil Collins</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.76399026764</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">Rod Stewart</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.773333333333</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">Annie Lennox</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.776623376623</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">Barry Gibb</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.780952380952</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">5</td>\n",
+       "    </tr>\n",
+       "</table>\n",
+       "[5 rows x 4 columns]<br/>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Columns:\n",
+       "\tquery_label\tint\n",
+       "\treference_label\tstr\n",
+       "\tdistance\tfloat\n",
+       "\trank\tint\n",
+       "\n",
+       "Rows: 5\n",
+       "\n",
+       "Data:\n",
+       "+-------------+-----------------+----------------+------+\n",
+       "| query_label | reference_label |    distance    | rank |\n",
+       "+-------------+-----------------+----------------+------+\n",
+       "|      0      |    Elton John   |      0.0       |  1   |\n",
+       "|      0      |   Phil Collins  | 0.76399026764  |  2   |\n",
+       "|      0      |   Rod Stewart   | 0.773333333333 |  3   |\n",
+       "|      0      |   Annie Lennox  | 0.776623376623 |  4   |\n",
+       "|      0      |    Barry Gibb   | 0.780952380952 |  5   |\n",
+       "+-------------+-----------------+----------------+------+\n",
+       "[5 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knn_model_raw.query(elton)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "joel = people[people['name'] == 'Billy Joel']\n",
+    "richard = people[people['name'] == 'Cliff Richard']\n",
+    "daltrey = people[people['name'] == 'Roger Daltrey']\n",
+    "bush = people[people['name'] == 'George Bush']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.222217647818\n",
+      "0.16142415259\n",
+      "0.177554184666\n"
+     ]
+    }
+   ],
+   "source": [
+    "print graphlab.distances.cosine(elton['word_count'][0],joel['word_count'][0])\n",
+    "print graphlab.distances.cosine(elton['word_count'][0],richard['word_count'][0])\n",
+    "print graphlab.distances.cosine(elton['word_count'][0],daltrey['word_count'][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cliff Richard"
    ]
   },
   {
