Document retrieval assignment. Answer question 7

--- a/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 4/Document retrieval-Assignment.ipynb
+++ b/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 4/Document retrieval-Assignment.ipynb
@@ -2178,6 +2178,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. Who is the nearest neighbor to 'Elton John' using TF-IDF?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROGRESS: Starting pairwise querying.\n",
+      "PROGRESS: +--------------+---------+-------------+--------------+\n",
+      "PROGRESS: | Query points | # Pairs | % Complete. | Elapsed Time |\n",
+      "PROGRESS: +--------------+---------+-------------+--------------+\n",
+      "PROGRESS: | 0            | 1       | 0.00169288  | 15.244ms     |\n",
+      "PROGRESS: | Done         |         | 100         | 233.441ms    |\n",
+      "PROGRESS: +--------------+---------+-------------+--------------+\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\"><table frame=\"box\" rules=\"cols\">\n",
+       "    <tr>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">query_label</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">reference_label</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">distance</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">rank</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">Elton John</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">Phil Collins</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.76399026764</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">Rod Stewart</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.773333333333</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">Annie Lennox</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.776623376623</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">Barry Gibb</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.780952380952</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">5</td>\n",
+       "    </tr>\n",
+       "</table>\n",
+       "[5 rows x 4 columns]<br/>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Columns:\n",
+       "\tquery_label\tint\n",
+       "\treference_label\tstr\n",
+       "\tdistance\tfloat\n",
+       "\trank\tint\n",
+       "\n",
+       "Rows: 5\n",
+       "\n",
+       "Data:\n",
+       "+-------------+-----------------+----------------+------+\n",
+       "| query_label | reference_label |    distance    | rank |\n",
+       "+-------------+-----------------+----------------+------+\n",
+       "|      0      |    Elton John   |      0.0       |  1   |\n",
+       "|      0      |   Phil Collins  | 0.76399026764  |  2   |\n",
+       "|      0      |   Rod Stewart   | 0.773333333333 |  3   |\n",
+       "|      0      |   Annie Lennox  | 0.776623376623 |  4   |\n",
+       "|      0      |    Barry Gibb   | 0.780952380952 |  5   |\n",
+       "+-------------+-----------------+----------------+------+\n",
+       "[5 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knn_model.query(elton)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rod Stewart"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
