Document retrieval-Assignment. Answer question 8

--- a/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 4/Document retrieval-Assignment.ipynb
+++ b/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 4/Document retrieval-Assignment.ipynb
@@ -2287,6 +2287,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8. Who is the nearest neighbor to 'Victoria Beckham' using raw word counts?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sdb = people[people['name'] == 'Stephen Dow Beckham']\n",
+    "malloy = people[people['name'] == 'Louis Molloy']\n",
+    "corri = people[people['name'] == 'Adrienne Corri']\n",
+    "fitzgerald = people[people['name'] == 'Mary Fitzgerald (artist)']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.31219127606\n",
+      "0.310507512959\n",
+      "0.214509782788\n",
+      "0.207307036115\n"
+     ]
+    }
+   ],
+   "source": [
+    "print graphlab.distances.cosine(viki['word_count'][0],sdb['word_count'][0])\n",
+    "print graphlab.distances.cosine(viki['word_count'][0],malloy['word_count'][0])\n",
+    "print graphlab.distances.cosine(viki['word_count'][0],corri['word_count'][0])\n",
+    "print graphlab.distances.cosine(viki['word_count'][0],fitzgerald['word_count'][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mary Fitzgerald (artist)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
